# openbb-metricsv2

./: .gitattributes  .gitignore  README.md  main.py  metrics.json  pyproject.toml  requirements.txt
.github/workflows/: metrics-runner.yml
utilities/: config.py  helpers.py
